Add ul to WhoisMabel html

--- a/WhoisMabel.html
+++ b/WhoisMabel.html
@@ -4,9 +4,12 @@
   <title>The Mabe.</title>
 </head>
 <body>
-  <h1>The Mabe.</h1>
-  <h2>The Dog. </h2>
-  <h3 style="color:pink;"><em>The Legend</em></h3>
+  <h1>She is...</h1>
+  <ul>
+    <li>The Mabe.</li>
+    <li>The dog.</li>
+    <li style="color:pink;"><em>The Legend.</em></li>
+  </ul>
   <img src="Mabels/MabelWindow.jpg">
 </body>
 <footer>
