Edit image source for MabelisEverywhere

--- a/MabelisEverywhere.html
+++ b/MabelisEverywhere.html
@@ -7,7 +7,7 @@
   <h1>Mabel Is In Everything</h1>
     <img src="Mabels/MabelMonster.jpg" style="width:300px;height:300px;">
     </br>
-    <img src="Mabels/MabelMonster2.jpg"style="width:300px;height:300px;">
+    <img src="Mabels/MabelMonster2.JPG"style="width:300px;height:300px;">
     </br>
     <img src="Mabels/MabelPanda.jpg" style="width:300px;height:300px;">
 
