Edit image source for MabelTable

--- a/MabelTable.html
+++ b/MabelTable.html
@@ -16,7 +16,7 @@
     </tr>
   </table>
   <h2>Proof...</h2>
-    <img src=Mabels/Mabe.jpg style="width:300px;">
+    <img src=Mabels/Mabe.JPG style="width:300px;">
 
 
 </body>
