--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <a href="MabelisEverywhere.html"><img src="Mabels/MabelMeme.jpg" alt="Mabel Sees All"  style="width:300px;height:300px;"></a>
     <a href="WhoisMabel.html"><img src="Mabels/MabelUnflattering.jpg" alt="Unflattering Mabe pic" style="width:300px;height:300px;"></a>
     <a href="MabelTable.html"><img src="Mabels/Mabelrelaxed.JPG" alt="Mabel chilling" style="width:300px;height:300px;"></a>
+
+  </br>
+  <p style="text-align:center;">Comparing this site with another <a href="compare.html">Fanpage<a></p>
   </nav>
+
+
 
 
 </body>
