Edit spelling on compare page

--- a/compare.html
+++ b/compare.html
@@ -6,7 +6,7 @@
 <body>
   <h1>There are a lot of dog blogs out there...</h1>
   <p style="color:pink;"><em>There may only be one Mabe...</em></p>
-  <p>But <a href="http://mygbgvlife.com/about/">this blog</a> does an okay job of documenting the life of another dog. It has multiple pages you can navagate through along with some images, embedded links and videos, and an unordered list. This blog doesn't have a table like Mabel's, but it does have a lot more written content.</p>
+  <p>But <a href="http://mygbgvlife.com/about/">this blog</a> does an okay job of documenting the life of another dog. It has multiple pages you can navigate through along with some images, embedded links and videos, and an unordered list. This blog doesn't have a table like Mabel's, but it does have a lot more written content.</p>
 </body>
 <footer>
   <p> Go back to the <strong><a href="index.html">Main Mabel<a></strong>.
