add 'bad dogs' to mabel table

--- a/MabelTable.html
+++ b/MabelTable.html
@@ -8,7 +8,7 @@
   <table border="2">
     <tr>
       <th>Dogs that should be Memes</th>
-      <th>Good Dogs</th>
+      <th>Bad Dogs</th>
     </tr>
     <tr>
       <td>Mabel</td>
