--- a/index.html
+++ b/index.html
@@ -1,22 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><strong><em>Mabel</em></strong></title>
+  <title>Space Oddity</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <h1 style="text-align:center; color:gray;"><strong>Mabel It's Mabelline</strong></h1>
-  <h2 style="text-align:center; color:pink;" s><em>Mabel She's Born With It</em></h2>
-  <nav>
-    <a href="MabelisEverywhere.html"><img src="Mabels/MabelMeme.jpg" alt="Mabel Sees All"  style="width:300px;height:300px;"></a>
-    <a href="WhoisMabel.html"><img src="Mabels/MabelUnflattering.jpg" alt="Unflattering Mabe pic" style="width:300px;height:300px;"></a>
-    <a href="MabelTable.html"><img src="Mabels/Mabelrelaxed.JPG" alt="Mabel chilling" style="width:300px;height:300px;"></a>
+  <div class="audiobar">
+      <audio controls>
+        <source src="spaceod.mp3" type="audio/mp3">
+        Listen Here!
+      </audio>
+  </div>
 
-  </br>
-  <p style="text-align:center;">Comparing this site with another <a href="compare.html">Fanpage<a></p>
-  </nav>
+  <div class="pageone">
+      <div class="text">Ground Control to Major Tom</div>
+  </div>
 
+   <div class="pagetwo">
+    <div class="text">Ground Control to Major Tom</div>
+  </div>
 
+  <div class="pagethree">
+    <div class="text">
+      Take your protein pills
+    </div>
+  </div>
 
+<div class="pagefour"><div class="text"> And put your helmets on
+        </div></div>
 
-</body>
-</html>
+  <div class="pagefive">
+    <div class="text">Ground Control to Major Tom</div>
+  </div>
+
+  <div class="pagesix"></div>
+  <div class="pageseven"></div>
+<div class="pageeight"></div>
+<div class="pagenine">    </div>
+
+<div class="pageten"><div class="text">Commencing countdown, engines on</div> </div>
+<div class="pageeleven"></div>
+<div class="pagetwelve"></div>
+<div class="pagethirteen"></div>
+<div class="text">Check ignition and may God's love be with you</div>
+<div class="pagefourteen"></div>
+
+<div class="launch">
+  <figure id="rocket"><a href="https://www.youtube.com/watch?v=FzCsDVfPQqk" ><img src="images/rocketlaunch.jpg" alt="Rocket Launch"><figcaption>CLICK ME!</figcaption></a></figure>
+</div>
+
+<div class="pagefifteen">
+  <div class="text">
+    <p>This is Ground Control to Major Tom
+    </p>
+  </div>
+   <img src="images/youmadethegrade.jpg" style="float:left;width:200px; margin: -30px; padding:50px;">
+   <p id="yotom"> "You've really made the grade <br>
+    And the papers want to know whose shirts you wear <br>
+    Now it's time to leave the capsule if you dare" </p>
+</div>
+
+<div class="pagesixteen">
+  <div class="text" >
+  This is Major Tom to Ground Control
+  </div>
+    <img src="images/floating.jpg" style="float:right; width: 400px;margin: -30px; padding:50px;"> <p id="yogc"> "I'm stepping through the door <br> And I'm floating in the most peculiar way <br>
+    And the stars look very different today" </p>
+</div>
+
+<div class="pageseventeen">
+    <div class="text">
+      For here am I sitting in my tin can
+    </div>
+</div>
+
+ <div class="pageeighteen">
+    <div class="text">
+      <p>Far above the world
+      </p>
+    </div>
+  </div>
+
+<div class="pagenineteen">
+  <div class="text">
+    <p>Planet Earth is blue and there's nothing I can do
+    </p>
+  </div>
+
